[gd_scene load_steps=7 format=3 uid="uid://voame8khoida"]

[ext_resource type="Script" path="res://scenes/HUD/Menus/title_menu.gd" id="1_6xk4k"]
[ext_resource type="Theme" uid="uid://7kt8u7jnbucu" path="res://themes/debug_menu.tres" id="1_jgpy1"]
[ext_resource type="Shader" path="res://shaders/texture_scroll.gdshader" id="2_w7ebx"]
[ext_resource type="Texture2D" uid="uid://dv6gkc3f1mx3s" path="res://assets/Sprites/Background/Green.png" id="3_xin76"]
[ext_resource type="Texture2D" uid="uid://dah46lnogvaic" path="res://assets/Sprites/Logo.png" id="4_7iihy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fw7fn"]
shader = ExtResource("2_w7ebx")
shader_parameter/speed = 0.2

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_jgpy1")
script = ExtResource("1_6xk4k")

[node name="BG" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_fw7fn")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_xin76")
stretch_mode = 1

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.228
anchor_right = 0.5
anchor_bottom = 0.228
offset_left = -270.0
offset_top = -98.16
offset_right = 270.0
offset_bottom = 221.84
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
texture = ExtResource("4_7iihy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.9
anchor_right = 0.6
anchor_bottom = 0.9
offset_left = -126.5
offset_top = -246.0
offset_right = 126.5
grow_horizontal = 2
grow_vertical = 0

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Play"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
